--- a/Notebook/Assignment3.ipynb
+++ b/Notebook/Assignment3.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,16 +27,19 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "import pycountry\n",
     "from pycountry_convert import country_name_to_country_alpha3\n",
     "import chart_studio.plotly as py\n",
     "import chart_studio.tools as tls\n",
+    "from typing import Optional\n",
     "from pyecharts import options as opts\n",
     "from pyecharts.charts import Bar, Pie\n",
     "from pyecharts.faker import Faker\n",
     "from pyecharts.commons.utils import JsCode\n",
+    "from pyecharts.globals import ThemeType\n",
     "\n",
     "tls.set_credentials_file(username='kokonori97', api_key='xuGevenIyGrS2cbV69tb')"
    ]
@@ -1431,18 +1434,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def year_count(df):\n",
+    "def year_count(df, col: Optional[int] = None):\n",
+    "    if col is not None:\n",
+    "        df=df[full_data[col]==1]\n",
+    "        \n",
     "    all_years=list(df['Dat'].apply(lambda x: x.year))\n",
     "    year_set=set(all_years)\n",
     "    year_count=[]\n",
     "\n",
     "    for year in list(year_set):\n",
     "        year_count.append(all_years.count(year))\n",
-    "    return year_count, year_set\n",
+    "    return year_count, list(year_set)\n",
     "    "
    ]
   },
@@ -1563,36 +1569,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'value': 3, 'percent': 0.75}, {'value': 9, 'percent': 0.8181818181818182}, {'value': 6, 'percent': 0.375}, {'value': 11, 'percent': 0.5789473684210527}, {'value': 12, 'percent': 0.7058823529411765}, {'value': 12, 'percent': 0.5714285714285714}, {'value': 14, 'percent': 0.8235294117647058}, {'value': 5, 'percent': 0.35714285714285715}, {'value': 8, 'percent': 0.7272727272727273}, {'value': 12, 'percent': 0.4444444444444444}, {'value': 8, 'percent': 0.5333333333333333}, {'value': 10, 'percent': 0.5555555555555556}, {'value': 11, 'percent': 0.6470588235294118}, {'value': 17, 'percent': 0.6296296296296297}, {'value': 14, 'percent': 0.7368421052631579}, {'value': 10, 'percent': 0.6666666666666666}, {'value': 19, 'percent': 0.5588235294117647}, {'value': 11, 'percent': 0.7333333333333333}, {'value': 21, 'percent': 0.6}, {'value': 8, 'percent': 0.6666666666666666}, {'value': 8, 'percent': 0.4444444444444444}, {'value': 16, 'percent': 0.48484848484848486}, {'value': 13, 'percent': 0.5}, {'value': 20, 'percent': 0.5555555555555556}, {'value': 21, 'percent': 0.6363636363636364}, {'value': 26, 'percent': 0.6190476190476191}, {'value': 22, 'percent': 0.6285714285714286}, {'value': 6, 'percent': 0.42857142857142855}, {'value': 10, 'percent': 0.5}, {'value': 6, 'percent': 0.5454545454545454}, {'value': 2, 'percent': 0.4}]\n",
+      "[{'value': 0, 'percent': 0.0}, {'value': 1, 'percent': 0.09090909090909091}, {'value': 1, 'percent': 0.0625}, {'value': 3, 'percent': 0.15789473684210525}, {'value': 1, 'percent': 0.058823529411764705}, {'value': 4, 'percent': 0.19047619047619047}, {'value': 1, 'percent': 0.058823529411764705}, {'value': 3, 'percent': 0.21428571428571427}, {'value': 0, 'percent': 0.0}, {'value': 6, 'percent': 0.2222222222222222}, {'value': 3, 'percent': 0.2}, {'value': 3, 'percent': 0.16666666666666666}, {'value': 1, 'percent': 0.058823529411764705}, {'value': 3, 'percent': 0.1111111111111111}, {'value': 3, 'percent': 0.15789473684210525}, {'value': 4, 'percent': 0.26666666666666666}, {'value': 6, 'percent': 0.17647058823529413}, {'value': 2, 'percent': 0.13333333333333333}, {'value': 6, 'percent': 0.17142857142857143}, {'value': 3, 'percent': 0.25}, {'value': 5, 'percent': 0.2777777777777778}, {'value': 5, 'percent': 0.15151515151515152}, {'value': 4, 'percent': 0.15384615384615385}, {'value': 6, 'percent': 0.16666666666666666}, {'value': 4, 'percent': 0.12121212121212122}, {'value': 7, 'percent': 0.16666666666666666}, {'value': 6, 'percent': 0.17142857142857143}, {'value': 2, 'percent': 0.14285714285714285}, {'value': 1, 'percent': 0.05}, {'value': 1, 'percent': 0.09090909090909091}, {'value': 0, 'percent': 0.0}]\n"
+     ]
+    }
+   ],
    "source": [
-    "from pyecharts import options as opts\n",
-    "from pyecharts.charts import Bar\n",
-    "from pyecharts.commons.utils import JsCode\n",
-    "from pyecharts.globals import ThemeType\n",
+    "def zero_padding(set1,set2,_list):\n",
+    "    for i in range(len(set2)):\n",
+    "        if set2[i] not in set1:\n",
+    "            _list.insert(i, 0)\n",
     "\n",
-    "list2 = [\n",
-    "    {\"value\": 12, \"percent\": 12 / (12 + 3)},\n",
-    "    {\"value\": 23, \"percent\": 23 / (23 + 21)},\n",
-    "    {\"value\": 33, \"percent\": 33 / (33 + 5)},\n",
-    "    {\"value\": 3, \"percent\": 3 / (3 + 52)},\n",
-    "    {\"value\": 33, \"percent\": 33 / (33 + 43)},\n",
-    "]\n",
+    "def pre_processing(_list,_sum):\n",
+    "    temp_list=[]\n",
     "\n",
-    "list3 = [\n",
-    "    {\"value\": 3, \"percent\": 3 / (12 + 3)},\n",
-    "    {\"value\": 21, \"percent\": 21 / (23 + 21)},\n",
-    "    {\"value\": 5, \"percent\": 5 / (33 + 5)},\n",
-    "    {\"value\": 52, \"percent\": 52 / (3 + 52)},\n",
-    "    {\"value\": 43, \"percent\": 43 / (33 + 43)},\n",
-    "]\n",
+    "    for i in range(len(_list)):\n",
+    "        cur_value=_list[i]\n",
+    "        cur_sum=_sum[i]\n",
+    "        cur_result={\"value\": cur_value, \"percent\":cur_value/cur_sum}\n",
+    "\n",
+    "        temp_list.append(cur_result)\n",
+    "    return temp_list\n",
+    "\n",
+    "\n",
+    "GeWom_yearly_count, GeWom_set =year_count(full_data,'GeWom')\n",
+    "\n",
+    "GeMe_yearly_count, GeMe_set =year_count(full_data,'GeMe')\n",
+    "GCh_yearly_count, GCh_set =year_count(full_data,'GCh')\n",
+    "GDis_yearly_count, GDis_set =year_count(full_data,'GDis')\n",
+    "GAge_yearly_count, GAge_set =year_count(full_data,'GAge')\n",
+    "\n",
+    "\n",
+    "zero_padding(GeMe_set,GeWom_set,GeMe_yearly_count)\n",
+    "zero_padding(GCh_set,GeWom_set,GCh_yearly_count)\n",
+    "zero_padding(GDis_set,GeWom_set,GDis_yearly_count)\n",
+    "zero_padding(GAge_set,GeWom_set,GAge_yearly_count)\n",
+    "\n",
+    "sum_list=[]\n",
+    "\n",
+    "for i in range(len(GeWom_yearly_count)):\n",
+    "    sum_list.append(GeWom_yearly_count[i]+GeMe_yearly_count[i]+GCh_yearly_count[i]+GDis_yearly_count[i]+GAge_yearly_count[i])\n",
+    "\n",
+    "    \n",
+    "list1=pre_processing(GeWom_yearly_count,sum_list)\n",
+    "list2=pre_processing(GeMe_yearly_count,sum_list)\n",
+    "list3=pre_processing(GCh_yearly_count,sum_list)\n",
+    "list4=pre_processing(GDis_yearly_count,sum_list)\n",
+    "list5=pre_processing(GAge_yearly_count,sum_list)\n",
+    "\n",
+    "print(list1)\n",
+    "print(list2)\n",
     "\n",
     "c = (\n",
     "    Bar(init_opts=opts.InitOpts(theme=ThemeType.LIGHT))\n",
-    "    .add_xaxis([1, 2, 3, 4, 5])\n",
-    "    .add_yaxis(\"product1\", list2, stack=\"stack1\", category_gap=\"50%\")\n",
-    "    .add_yaxis(\"product2\", list3, stack=\"stack1\", category_gap=\"50%\")\n",
+    "    .add_xaxis(GeWom_set)\n",
+    "    .add_yaxis(\"product1\", list1, stack=\"stack1\", category_gap=\"50%\")\n",
+    "    .add_yaxis(\"product2\", list2, stack=\"stack1\", category_gap=\"50%\")\n",
+    "    .add_yaxis(\"product3\", list3, stack=\"stack1\", category_gap=\"50%\")\n",
+    "    .add_yaxis(\"product4\", list4, stack=\"stack1\", category_gap=\"50%\")\n",
+    "    .add_yaxis(\"product5\", list5, stack=\"stack1\", category_gap=\"50%\")    \n",
     "    .set_series_opts(\n",
     "        label_opts=opts.LabelOpts(\n",
     "            position=\"right\",\n",
@@ -1602,7 +1644,7 @@
     "        )\n",
     "    )\n",
     "    .set_global_opts(\n",
-    "        title_opts=opts.TitleOpts(title=\"Bar-DataZoom（inside）\"),\n",
+    "        title_opts=opts.TitleOpts(title=\"Bar-DataZoom\"),\n",
     "        datazoom_opts=opts.DataZoomOpts(),\n",
     "    )    \n",
     "    .render(\"stack_bar_percent.html\")\n",
