--- a/Notebook/Assignment3.ipynb
+++ b/Notebook/Assignment3.ipynb
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1550,7 +1550,6 @@
     "        label_opts=new_label_opts(),\n",
     "    )\n",
     "    .set_global_opts(\n",
-    "        title_opts=opts.TitleOpts(title=\"Women/girls compared to other vulnerable groups\"),\n",
     "        legend_opts=opts.LegendOpts(\n",
     "            type_=\"scroll\", pos_top=\"20%\", pos_left=\"80%\", orient=\"vertical\"\n",
     "        ),\n",
@@ -1569,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1630,11 +1629,11 @@
     "c = (\n",
     "    Bar(init_opts=opts.InitOpts(theme=ThemeType.LIGHT))\n",
     "    .add_xaxis(GeWom_set)\n",
-    "    .add_yaxis(\"product1\", list1, stack=\"stack1\", category_gap=\"50%\")\n",
-    "    .add_yaxis(\"product2\", list2, stack=\"stack1\", category_gap=\"50%\")\n",
-    "    .add_yaxis(\"product3\", list3, stack=\"stack1\", category_gap=\"50%\")\n",
-    "    .add_yaxis(\"product4\", list4, stack=\"stack1\", category_gap=\"50%\")\n",
-    "    .add_yaxis(\"product5\", list5, stack=\"stack1\", category_gap=\"50%\")    \n",
+    "    .add_yaxis(\"GeWom\", list1, stack=\"stack1\", category_gap=\"50%\")\n",
+    "    .add_yaxis(\"GeMe\", list2, stack=\"stack1\", category_gap=\"50%\")\n",
+    "    .add_yaxis(\"GCh\", list3, stack=\"stack1\", category_gap=\"50%\")\n",
+    "    .add_yaxis(\"GDis\", list4, stack=\"stack1\", category_gap=\"50%\")\n",
+    "    .add_yaxis(\"GAge\", list5, stack=\"stack1\", category_gap=\"50%\")    \n",
     "    .set_series_opts(\n",
     "        label_opts=opts.LabelOpts(\n",
     "            position=\"right\",\n",
@@ -1644,7 +1643,6 @@
     "        )\n",
     "    )\n",
     "    .set_global_opts(\n",
-    "        title_opts=opts.TitleOpts(title=\"Bar-DataZoom\"),\n",
     "        datazoom_opts=opts.DataZoomOpts(),\n",
     "    )    \n",
     "    .render(\"stack_bar_percent.html\")\n",
